# Banking_System

./: CMakeLists.txt  CMakePresets.json  README.md
Client/: CMakeLists.txt  Client.pro  CreateNewUserRequest.cpp  CreateNewUserRequest.h  DeleteUserRequest.cpp  DeleteUserRequest.h  Encryption.h  GetAccountNumberAdminRequest.cpp  GetAccountNumberAdminRequest.h  GetAccountNumberUserRequest.cpp  GetAccountNumberUserRequest.h  LoginRequest.cpp  LoginRequest.h  MakeTransactionRequest.cpp  MakeTransactionRequest.h  MyClient.cpp  MyClient.h  Request.cpp  Request.h  RequestValidator.cpp  RequestValidator.h  ResponseHandler.cpp  ResponseHandler.h  Signature.cpp  Signature.h  TransferAmountRequest.cpp  TransferAmountRequest.h  UpdateUserRequest.cpp  UpdateUserRequest.h  ViewAccountDetailsRequest.cpp  ViewAccountDetailsRequest.h  ViewBalanceRequest.cpp  ViewBalanceRequest.h  ViewBankDatabaseRequest.cpp  ViewBankDatabaseRequest.h  ViewTransactionHistoryRequest.cpp  ViewTransactionHistoryRequest.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Presentaiton/: BankingSystem.pptx
Server/: BankDataBase.json  CMakeLists.txt  DataBaseManager.cpp  DataBaseManager.h  Encryption.cpp  Encryption.h  Memento.cpp  Memento.h  MyServer.cpp  MyServer.h  MyServerHandler.cpp  MyServerHandler.h  ReceivedResponseHandler.cpp  ReceivedResponseHandler.h  RequestHandler.cpp  RequestHandler.h  Server.pro  Signature.h  main.cpp  send_email.py
